Fix : scroll overflow, images

--- a/src/css/events.css
+++ b/src/css/events.css
@@ -1,30 +1,37 @@
+.event-page {
+  padding-bottom: 150px;
+}
 .event-container {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 60px;
-  padding: 20px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-start; /* Align items to the start of the container */
+  padding: 50px;
 }
 
 .event-card {
   border: 1px solid #ccc;
   border-radius: 8px;
-  width: 300px;
+  width: calc(25% - 40px); /* Adjusted width for four cards per row */
+  margin-bottom: 20px;
+  box-sizing: border-box; /* Include padding and border in the width calculation */
   padding: 20px;
-  display: flex;
-  flex-direction: column;
-  margin: 20px;
+}
+
+.event-card .event-details {
+  padding: 10px;
 }
 
 .event-image-container {
-  height: 200px; /* Set a fixed height for the image container */
-  overflow: hidden; /* Hide any overflow */
+  height: 200px;
+  overflow: hidden;
   border-radius: 8px;
 }
 
 .event-image {
-  width: 100%; /* Ensure the image covers the entire container */
-  height: auto; /* Maintain aspect ratio */
+  width: 100%;
+  height: auto;
+  border-radius: 8px; /* Ensure the image covers the entire container */
 }
 
 .event-title {
@@ -51,12 +58,18 @@
 }
 
 h1 {
-  color: var(
-    --primary-fontcolor
-  ); /* Use a custom CSS variable for flexibility */
+  color: var(--primary-fontcolor);
   text-align: center;
-  font-size: 3em; /* Adjust font size */
-  font-weight: bold; /* Make the text bold */
-  text-shadow: 2px 2px 4px rgba(131, 122, 122, 0.5); /* Add a subtle text shadow */
-  animation: glow 2s ease-in-out infinite alternate; /* Add a glowing animation */
+  font-size: 3em;
+  font-weight: bold;
+  text-shadow: 2px 2px 4px rgba(131, 122, 122, 0.5);
+  animation: glow 2s ease-in-out infinite alternate;
+  padding-top: 30px;
+}
+
+p.desc {
+  font-size: 1.1em;
+  color: var(--primary-fontcolor);
+  text-align: center;
+  margin: 20px 0;
 }
